force-app/main/Messaging/objects/New_Message_Notification__e/New_Message_Notification__e.object-meta.xml
<CustomObject>
    <label>New Message Notification</label>
    <pluralLabel>New Message Notifications</pluralLabel>
    <description>Platform event for real-time message toast notifications</description>
</CustomObject> 