force-app/main/Messaging/objects/New_Message_Notification__e/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <description>Name of the channel (if applicable)</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 