force-app/main/Messaging/objects/New_Message_Notification__e/fields/IsChannelMessage__c.field-meta.xml
<CustomField>
    <fullName>IsChannelMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a channel message</description>
    <label>Is Channel Message</label>
    <type>Checkbox</type>
</CustomField> 