force-app/main/Messaging/objects/New_Message_Notification__e/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>ID of the message record</description>
    <label>Message ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 