force-app/main/Messaging/objects/New_Message_Notification__e/fields/MessageSnippet__c.field-meta.xml
<CustomField>
    <fullName>MessageSnippet__c</fullName>
    <description>Preview of the message content</description>
    <label>Message Snippet</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 