force-app/main/Messaging/objects/New_Message_Notification__e/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <description>ID of the message recipient</description>
    <label>Recipient ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 