force-app/main/Messaging/objects/New_Message_Notification__e/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <description>Name of the message sender</description>
    <label>Sender Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 